[tool.poetry]
name = "c7n_trailcreator"
version = "0.2.41"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
description = "Cloud Custodian - Retroactive Tag Resource Creators from CloudTrail"
documentation = "https://cloudcustodian.io/docs/tools/c7n-trailcreator.html"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"

classifiers=[
   "License :: OSI Approved :: Apache Software License",
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-trailcreator = 'c7n_trailcreator.trailcreator:cli'

[tool.poetry.dependencies]
python = "^3.8"
c7n = {path = "../..", develop = true}
c7n_org = {path = "../c7n_org", develop = true}

click = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

